fixed tab alignment

--- a/main.css
+++ b/main.css
@@ -92,7 +92,7 @@
 }
 /* Style the tab */
 .tab-tr {
-  overflow: hidden;
+  display: flex;
   border: 1px solid #ccc;
   background-color: #f1f1f1;
   position: sticky;
@@ -102,19 +102,16 @@
 }
 /* Style the buttons inside the tab */
 .tab-tr button {
+  flex: 1 100%;
   background-color: inherit;
-  max-width: 300px;
-  float: left;
   border: none;
   outline: none;
   cursor: pointer;
-  padding: 14px 16px;
   transition: 0.3s;
   font-size: 17px;
 }
 /* Change background color of buttons on hover */
 .tab-tr button:hover {
-  text-align: center;
   background-color: #ddd;
 }
 /* Create an active/current tablink class */
@@ -131,16 +128,17 @@
 #btn-to-top {
   display: none;
   position: fixed;
-  bottom: 20px;
+  bottom: 40px;
   right: 110px;
   z-index: 99;
-  border: none;
   outline: none;
   border: 1px solid #ccc;
   background-color: #f1f1f1;
   cursor: pointer;
-  padding: 15px;
+  padding: 6px;
   border-radius: 4px;
+  transition: 0.3s;
+  font-size: 17px;
 }
 
 #btn-to-top:hover {
